--- a/css/index.css
+++ b/css/index.css
@@ -15,19 +15,21 @@ a {
   text-decoration: none;
 }
 
+.inner {
+  width: 1100px;
+  margin: 0 auto;
+
+  position: relative;
+}
+
 /* ------------------- Header ------------------- */
 header {
   background-color: #f6f5f0;
   border-bottom: 1px solid #c8c8c8;
 }
 
-header .inner {
-  width: 1100px;
+header > .inner {
   height: 120px;
-
-  margin: 0 auto;
-
-  position: relative;
 }
 
 header .logo {
@@ -113,7 +115,7 @@ header .sub-menu .search input {
 
 header .sub-menu .search input:focus {
   width: 150px;
-  border-color: #669900;
+  border-color: #036635;
 }
 
 header .sub-menu .search .material-icons {
@@ -124,9 +126,106 @@ header .sub-menu .search .material-icons {
   bottom: 0;
   right: 5px;
   margin: auto;
-  transition: 0.4s;
+  transition: 0.5s;
 }
 
 header .sub-menu .search.focused .material-icons {
   opacity: 0;
+  /* position: absolute;
+
+  height: 24px;
+
+  top: 0;
+  bottom: 0;
+  right: -30px;
+  margin: auto; */
+}
+
+header .main-menu {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  display: flex;
+}
+
+header .main-menu .item {
+}
+
+header .main-menu .item .item__name {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+
+  padding: 10px 20px 34px 20px;
+}
+
+header .main-menu .item:hover .item__name {
+  background-color: #2c2a29;
+  color: #036635;
+  border-radius: 6px 6px 0 0;
+}
+
+header .main-menu .item .item__contents {
+  width: 100%;
+  position: fixed;
+  left: 0;
+
+  display: none;
+}
+
+header .main-menu .item:hover .item__contents {
+  display: block;
+}
+
+header .main-menu .item .item__contents .contents__menu {
+  background-color: #2c2a29;
+  height: 300px;
+}
+
+header .main-menu .item .item__contents .contents__menu > ul {
+  padding: 20px 0;
+  display: flex;
+}
+
+header .main-menu .item .item__contents .contents__menu > ul > li {
+  width: 200px;
+}
+
+header .main-menu .item .item__contents .contents__menu > ul > li h4 {
+  font-size: 14px;
+  color: #fff;
+  padding: 3px 0 12px 0;
+}
+
+header .main-menu .item .item__contents .contents__menu > ul > li ul li {
+  font-size: 12px;
+  color: #999;
+
+  cursor: pointer;
+
+  padding: 5px 0;
+}
+
+header .main-menu .item .item__contents .contents__menu > ul > li ul li:hover {
+  color: #036635;
+}
+
+header .main-menu .item .item__contents .contents__texture {
+  font-size: 12px;
+
+  padding: 26px 0;
+
+  background-image: url("../images/main_menu_pattern.jpg");
+}
+
+header .main-menu .item .item__contents .contents__texture h4 {
+  color: #999;
+  font-weight: 700;
+}
+
+header .main-menu .item .item__contents .contents__texture p {
+  color: #036635;
+  font-weight: 700;
+
+  margin: 4px 0 14px;
 }
